src/app/components/routes/login/login.component.css
h3 {
  z-index: 1;
  position: absolute;
  top: -7rem;
  width: 100%;
  margin: auto;
  font-size: 2rem;
}

input {
  height: 3rem;
  padding: auto;
}

.card-body {
  padding: 0px;
}

.card-title {
  color: white;
}

.form-group {
  padding-bottom: 24px;
  width: 90%;
  margin: auto;
}

.form-error {
  color: red;
  font-size: 0.8rem;
  display: inline;
}

.btn {
  width: 70%;
}

.btn:disabled {
  background-color: #D9D9D9;
  color: black;
}

form {
  padding-bottom: 1rem;
}

.form-icon-right {
  position: absolute;
  top: 10px;
  right: 10px;
  border: none;
  background-color: transparent;
  font-size: 24px;
  color: #323232;
}

.form-icon-right:hover {
  color: black
}

a, a.nostyle:link {
  text-decoration: inherit;
  color: blue !important;
  cursor: pointer !important;
}

a.nostyle:visited {
  text-decoration: inherit;
  color: blue;
  cursor: pointer;
}

